--- a/default_launch.json
+++ b/default_launch.json
@@ -8,7 +8,13 @@
     "dimensions": {
       "xMeters": 1500,
       "zMeters": 1500
-    }
+    },
+    "legacy_flags": [
+      {
+        "name": "bridge_qos_max_timeout",
+        "value": "0"
+      }
+    ]
   },
   "workers": [
     {
